# predictability_enables_parallelization

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: README.md  fig2.py  fig3.py  fig6.py  tab1.py  wandb_download_sweep.py  wandb_sweep.sh  wandb_sweep_to_pickle.py
experiments/configs/: fig2.yaml  fig3.yaml  fig6.yaml  tab1.yaml
experiments/plotting_code/: fig2_and_4_plot.py  fig3_and_7_plot.py  fig6_plot.py  layout.py
experiments/wandb_sweep_configs/: fig2.yaml  fig3.yaml  fig6_gd.yaml  fig6_no_gd.yaml  tab1.yaml
src/: deer.py  dynamics.py  lle.py
src/examples/: README.md  chaotic_flows.py  dmf_rnn.py  two_well.py
